--- a/templates/shop/MainPage.html.twig
+++ b/templates/shop/MainPage.html.twig
@@ -33,7 +33,7 @@
 
         #header{
             font-size: 40px;
-            background-color: forestgreen;
+            background-color: #265D68;
             color: white;
             font-family: "sans-serif";
 
@@ -59,7 +59,7 @@
         .produkt{
 
 
-            background-color: forestgreen;
+            background-color: #265D68;
             padding: 20px;
             margin-top: 50px;
             margin-left: 50px;
