--- a/templates/shop/paper.html.twig
+++ b/templates/shop/paper.html.twig
@@ -18,7 +18,7 @@
             height: 75px;
             width: 150px;
             color: white;
-            background-color: green;
+            background-color: #265D68;
             border-radius: 5px;
             font-size: 20px;
             transition: transform 0.2s ease-in-out;
@@ -56,7 +56,7 @@
 
         #header{
             font-size: 40px;
-            background-color: darkgreen;
+            background-color: #265D68;
             color: white;
             display: flex;
             align-items: center;
