--- a/templates/shop/special.html.twig
+++ b/templates/shop/special.html.twig
@@ -18,7 +18,7 @@
             height: 75px;
             width: 150px;
             color: white;
-            background-color: green;
+            background-color: #265D68;
             border-radius: 5px;
             font-size: 20px;
             transition: transform 0.2s ease-in-out;
@@ -46,6 +46,7 @@
             align-items: center;
             justify-content: center;
             margin-top: 20px;
+            padding-top: 20px;
         }
         #purchase{
             margin-left: 15px;
@@ -56,7 +57,7 @@
 
         #header{
             font-size: 40px;
-            background-color: darkgreen;
+            background-color: #265D68;
             color: white;
             display: flex;
             align-items: center;
